# doc_topic_definition_data_and_models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
config/: config.yaml
config/data_load/: data_load.yaml
config/logging/: logging.yaml
config/model/: model.yaml
config/training/: training.yaml
data/: .gitignore
doc_topic_definition_data_and_models/data_load/: .gitignore  download_data.py
doc_topic_definition_data_and_models/infer/: infer.py
doc_topic_definition_data_and_models/modules/: cnn_bilstm_model.py  compile_to_onnx.py  constants.py  dataloaders.py  lstm_model.py  model_selector.py  parser.py  preprocessing.py  rnn_model.py  trainer.py
doc_topic_definition_data_and_models/train/: train.py
triton/: Dockerfile.web  docker-compose.yml  triton.py  web_app.py
triton/model_repository/topic_definition/: config.pbtxt
